--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen auf meiner Seite!</h1>
+        <h1>Willkommen!</h1>
         <nav>
             <ul>
                 <li><a href="#about">Über uns</a></li>
@@ -38,4 +38,3 @@
     </footer>
 </body>
 </html>
-
